--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hallo Welt!
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+  <img src="posters/8groß.JPG">
+  <h1>libaOrigami</h1>
+
+  <img src="posters/3.JPG">
+  </p>
+  <h2>About Origami</h2>
+  <p>
+    Origami (from japanese "ori"=folding, "kami"=paper) is the ancient art of paper folding.
+    Originally, Origami comes from japan, where folding has a long tradition.
+  </p>
+  <p>
+
+  </p>
+  <h3>About me</h3>
+  <p>
+    ...
+  </p>
+
+  <h4>Gallery</h4>
+  <h5>
+    My works
+    <p>
+    </p>
+  <img class="images" src="posters/9.JPG">
+  <p>
+    "Frozen", January 2015
+  </p>
+  </h5>
+  <h6>
+    My folds
+
+  </h6>
+  <img class="images" src="posters/4.JPG">
+
+  <p>
+    "Alien Statue", design by Tong Liu, folded by me from a 21cm tissue-foil sqare
+  </p>
+  <p>
+
+  </p>
+  <img class="images" src="posters/5.JPG">
+  <p>
+    "Fiery Dragon", design by Kade Chan, folded by me from a 20cm square of thin double Mulberry tissue
+  </p>
+
+
+<p>
+  Links
+</p>
+<p>
+  <a class="rosso" href="http://unfoldingyourart.wordpress.com">Alexander Kurth</a>
+</p>
+<p>
+  <a class="rosso" href="http://origamiseiten.de">Carmen Sprung</a>
+</p>
+<p>
+  <a class="rosso" href="http://origami-live.de">Stephan Weber</a>
+</p>
+<p>
+  <a class="rosso" href="http://papierfalten.de">Origami Deutschland</a>
+</p>
+<p>
+  <a class="rosso" href="http://www.origami-cdo.it/">CDO Origami
+</p>
+<p>
+  <a class="rosso" href="http://www.origami.as/home.html">Joseph Wu Origami
+</p>
+
+
+</body>
+</html>
